// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search bar should filter list 1`] = `
<PopOverHandler>
  <div
    id="popup-greyer"
    onClick={[Function]}
  >
    <div
      id="pick-signer-popover"
    >
      <div
        id="popup-box"
        onClick={[Function]}
      >
        <div
          className="pick-signer-popover-container"
        >
          <div
            className="element-title"
          >
            Pick Document Signatories
          </div>
          <div
            className="search-bar-container"
          >
            <Blueprint3.InputGroup
              className="search-field"
              id="search-field"
              large={true}
              onChange={[Function]}
              placeholder="Search"
              type="search"
            />
          </div>
          <div
            className="user-tile-container"
          >
            <div
              key="0"
            >
              <div
                className="member-tile"
                id="contact-tile"
                key="0"
                onClick={[Function]}
              >
                <h4>
                  Name:
                </h4>
                <p>
                  Testy McTest
                </p>
                <h4>
                  Email:
                </h4>
                <p>
                  testy@prind.tech
                </p>
                <div
                  className="member-tile-tickbox"
                >
                  <ItemIcon
                    size="2x"
                    type="unticked"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="buttons-container"
          >
            <Blueprint3.Button
              disabled={true}
              intent="primary"
              onClick={[Function]}
              text="Submit"
            />
            <Blueprint3.Button
              onClick={[Function]}
              text="Cancel"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</PopOverHandler>
`;

exports[`Should render 1`] = `
<PopOverHandler>
  <div
    id="popup-greyer"
    onClick={[Function]}
  >
    <div
      id="pick-signer-popover"
    >
      <div
        id="popup-box"
        onClick={[Function]}
      >
        <div
          className="pick-signer-popover-container"
        >
          <div
            className="element-title"
          >
            Pick Document Signatories
          </div>
          <div
            className="search-bar-container"
          >
            <Blueprint3.InputGroup
              className="search-field"
              id="search-field"
              large={true}
              onChange={[Function]}
              placeholder="Search"
              type="search"
            />
          </div>
          <div
            className="user-tile-container"
          >
            <div
              key="0"
            >
              <div
                className="member-tile cannot-sign"
                id="contact-tile"
                key="0"
                onClick={[Function]}
              >
                <h4>
                  Name:
                </h4>
                <p>
                  Test Testerson
                </p>
                <h4>
                  Email:
                </h4>
                <p>
                  test@prind.tech
                </p>
                <div
                  className="member-tile-tickbox"
                >
                  <ItemIcon
                    size="2x"
                    type="unticked"
                  />
                </div>
              </div>
            </div>
            <div
              key="1"
            >
              <div
                className="member-tile"
                id="contact-tile"
                key="1"
                onClick={[Function]}
              >
                <h4>
                  Name:
                </h4>
                <p>
                  Testy McTest
                </p>
                <h4>
                  Email:
                </h4>
                <p>
                  testy@prind.tech
                </p>
                <div
                  className="member-tile-tickbox"
                >
                  <ItemIcon
                    size="2x"
                    type="unticked"
                  />
                </div>
              </div>
            </div>
            <div
              key="2"
            >
              <div
                className="member-tile cannot-sign"
                id="contact-tile"
                key="2"
                onClick={[Function]}
              >
                <h4>
                  Name:
                </h4>
                <p>
                  Needs Foundations To Sign
                </p>
                <h4>
                  Email:
                </h4>
                <p>
                  princy@prind.tech
                </p>
                <div
                  className="member-tile-tickbox"
                >
                  <ItemIcon
                    size="2x"
                    type="unticked"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="buttons-container"
          >
            <Blueprint3.Button
              disabled={true}
              intent="primary"
              onClick={[Function]}
              text="Submit"
            />
            <Blueprint3.Button
              onClick={[Function]}
              text="Cancel"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</PopOverHandler>
`;
